samples/_failures_safe/1761646728_52c6c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16dc070b.c: In function ‘main’:
./samples/SAFE/__tmp_16dc070b.c:140:12: error: missing terminating " character
  140 |     printf("Compressed
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_16dc070b.c:140:5: error: expected expression at end of input
  140 |     printf("Compressed
      |     ^~~~~~
./samples/SAFE/__tmp_16dc070b.c:140:5: error: expected declaration or statement at end of input
